plugins {
    id 'java-library'
    id 'maven-publish'
}

group 'com.combytebg'
version '1.0'

sourceCompatibility = 1.8 // java 1.8
targetCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
}

test {
    useJUnitPlatform()
}